doc + line route
