# routes/case.js
@@ -37,78 +37,6 @@ module.exports = (app, db) =>
 					res.status(500);
 					res.json(app.createError('Internal error'));
 				}
-			})
-
-		// Add case to a grid
-		.post(
-			app.handlers.authenticate(),
-			app.handlers.check_params({
-				x: {
-					required: true,
-					min_length: 1,
-					match: /^[0-9]+$/
-				},
-				y: {
-					required: true,
-					min_length: 1,
-					match: /^[0-9]+$/
-				},
-				item: {
-					required: true,
-					min_length: 1,
-					match: /^[0-9]+$/
-				}
-			}),
-			async (req, res) =>
-			{
-				try 
-				{
-					if (req.user.type != 'admin')
-					{
-						res.status(403);
-						res.json(app.createError('Not allowed'));
-						return;
-					}
-
-					let neighbours = await db.case.findAll({
-						"where":
-							db.Sequelize.or(
-								{ "x": parseInt(req.body.x) - 1, "y": parseInt(req.body.y) },
-								{ "x": parseInt(req.body.x), "y": parseInt(req.body.y) + 1 },
-								{ "x": parseInt(req.body.x) + 1, "y": parseInt(req.body.y) },
-								{ "x": parseInt(req.body.x), "y": parseInt(req.body.y) - 1 }
-							)
-					});
-					
-					if (!neighbours || neighbours.length == 0)
-					{
-						res.status(400);
-						res.json(app.createError('Cannot create case without neighbours'));
-						return;
-					}
-
-					let new_case = await db.case.create(
-						{
-							x: parseInt(req.body.x),
-							y: parseInt(req.body.y),
-							item: parseInt(req.body.item),
-							grid_id: parseInt(req.params.grid_id)
-						});
-
-					res.json(app.createResponse(new_case));
-				}
-				catch (err)
-				{
-					console.log(err);
-					if (err.parent.code == 'ER_DUP_ENTRY')
-					{
-						res.status(409);
-						res.json(app.createError('X-Y pair already existing'));
-					}
-
-					res.status(500);
-					res.json(app.createError('Internal error'));
-				}
 			});
 
 	CaseRouter.route('/:grid_id/case/:id')
